stack/galileo/oss-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: oss-service
  namespace: galileo
spec:
  type: ExternalName
  externalName: minio.boss-minio.svc.cluster.local
