stack/galileo/yrcloud-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: yrcloud-svc
  namespace: galileo
spec:
  type: ExternalName
  externalName: 172.28.1.79
