stack/galileo/health-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: health-proxy-ing
  namespace: galileo
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: mc.supos.com
      http:
        paths:
          - path: /
            backend:
              serviceName: health-svc
              servicePort: 8888
