stack/galileo/mobile-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-ing
  namespace: galileo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $action '';
      if ($host = 'mc.supos.com') {
          set $action 'A';
      }
      if ($request_uri = '/MP_verify_pkv4Ufgcew5FtMhv.txt') {
        set $action '${action}R';
      }
      if ($request_uri = '/mobile/login/MP_verify_pkv4Ufgcew5FtMhv.txt') {
        set $action '${action}R';
      }
      if ($action = AR) {
        rewrite ^/(.*)$ /galileo/$1 permanent ;
      }
spec:
  rules:
  - host: mc.supos.com
    http:
      paths:
      - path: /galileo(/|$)(.*)
        backend:
          serviceName: boss-mobile-h5
          servicePort: 80
      - path: /galileo(/services|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/auth|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/zuul|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/group|$)(.*)
        backend:
          serviceName: oss-service
          servicePort: 9000
  - host: mi.supos.com
    http:
      paths:
      - path: /galileo(/|$)(.*)
        backend:
          serviceName: boss-mobile-h5
          servicePort: 80
      - path: /galileo(/services|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/auth|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/zuul|$)(.*)
        backend:
          serviceName: openapi
          servicePort: 8080
      - path: /galileo(/group|$)(.*)
        backend:
          serviceName: oss-service
          servicePort: 9000
