stack/galileo/yrcloud-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yrcloud-proxy-ing
  namespace: galileo
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: store.supos.com
      http:
        paths:
          - path: /Product
            backend:
              serviceName: yrcloud-svc
              servicePort: 8000
          - path: /consultation
            backend:
              serviceName: yrcloud-svc
              servicePort: 8000
